initial configs cont.

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -20,7 +20,6 @@ Glassential-renewed
 Lootr
 MineColonies
 MineColonies for ComputerCraft
-Modular Routers
 Multi-Piston
 Myths_and_legends
 Nature's Compass
@@ -42,8 +41,14 @@ Akashic Tome
 Construction Sticks
 Dank Storage
 ME Requester
-Oh The Biomes We've Gone
 Oritech
 Productive Bees
 Productive Lib
 Simply Light
+Biomes O'Plenty Delight
+Cooking for Blockheads
+Flux Networks
+Immersive Energistics
+Immersive Engineering
+Pipez
+Tomtaru's Cobblemon & Immersive Engineering Tweaks
