--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -95,3 +95,23 @@ productivebees:bottler
 productivebees:centrifuge
 productivebees:incubation
 productivebees:item_conversion
+cookingforblockheads:cow_jar
+fluxnetworks:creating_flux
+immersiveengineering:alloy
+immersiveengineering:arc_furnace
+immersiveengineering:arc_recycling
+immersiveengineering:blast_furnace
+immersiveengineering:blast_furnace_fuel
+immersiveengineering:blueprint
+immersiveengineering:bottling_machine
+immersiveengineering:cloche
+immersiveengineering:coke_oven
+immersiveengineering:crusher
+immersiveengineering:fermenter
+immersiveengineering:fertilizer
+immersiveengineering:metal_press
+immersiveengineering:mixer
+immersiveengineering:refinery
+immersiveengineering:sawmill
+immersiveengineering:squeezer
+jeimultiblocks:multiblock
