--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -52,3 +52,8 @@ Immersive Energistics
 Immersive Engineering
 Pipez
 Tomtaru's Cobblemon & Immersive Engineering Tweaks
+Applied Mekanistics
+Easy Villagers
+Mekanism
+Mekanism: Generators
+Mekanism: Tools
