--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -115,3 +115,45 @@ immersiveengineering:refinery
 immersiveengineering:sawmill
 immersiveengineering:squeezer
 jeimultiblocks:multiblock
+easy_villagers:breeding
+easy_villagers:converting
+easy_villagers:incubating
+jei_mekanism_multiblocks:multiblock.mekanism.boiler
+jei_mekanism_multiblocks:multiblock.mekanism.dynamic_tank
+jei_mekanism_multiblocks:multiblock.mekanism.evaporation_plant
+jei_mekanism_multiblocks:multiblock.mekanism.matrix
+jei_mekanism_multiblocks:multiblock.mekanism.sps
+jei_mekanism_multiblocks:multiblock.mekanismgenerators.fission_reactor
+jei_mekanism_multiblocks:multiblock.mekanismgenerators.fusion_reactor
+jei_mekanism_multiblocks:multiblock.mekanismgenerators.turbine
+mekanism:activating
+mekanism:boiler_casing
+mekanism:centrifuging
+mekanism:chemical_conversion
+mekanism:chemical_infusing
+mekanism:combining
+mekanism:compressing
+mekanism:condensentrating
+mekanism:crushing
+mekanism:crystallizing
+mekanism:decondensentrating
+mekanism:dissolution
+mekanism:energy_conversion
+mekanism:enriching
+mekanism:evaporating
+mekanism:injecting
+mekanism:metallurgic_infusing
+mekanism:nucleosynthesizing
+mekanism:nutritional_liquifier
+mekanism:oxidizing
+mekanism:painting
+mekanism:pigment_extracting
+mekanism:pigment_mixing
+mekanism:purifying
+mekanism:reaction
+mekanism:sawing
+mekanism:separating
+mekanism:smelting
+mekanism:sps_casing
+mekanism:washing
+mekanismgenerators:fission
