--- a/config/Mekanism/client.toml
+++ b/config/Mekanism/client.toml
@@ -168,11 +168,11 @@
 	#The last position the Side Config window was in when it was closed, and whether it was pinned.
 	[window.side_config]
 		#The x component of this window's last position.
-		x = 10
+		x = -186
 		#The y component of this window's last position.
-		y = 15
+		y = 18
 		#Determines whether this window is pinned, and should open automatically when the GUI is reopened.
-		pinned = false
+		pinned = true
 
 	#The last position the Transporter Config window was in when it was closed, and whether it was pinned.
 	[window.transporter_config]
