--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -157,3 +157,6 @@ mekanism:smelting
 mekanism:sps_casing
 mekanism:washing
 mekanismgenerators:fission
+minecraft:tag_recipes/block
+minecraft:tag_recipes/fluid
+minecraft:tag_recipes/item
