--- a/config/legendarytooltips.toml
+++ b/config/legendarytooltips.toml
@@ -51,9 +51,9 @@
 	#    Negation - ~ followed by any selector above.  This selector will be negated, matching every item that does NOT match the selector.  Examples: "~minecraft:stick", "~!uncommon", "~@minecraft"
 	#    Combining selectors - Any number of selectors can be combined by separating them with a plus sign.  Examples: "minecraft:diamond_sword+&enchantments", "minecraft:stick+~!common+&damage>100"
 	[client.definitions]
-		level0_entries = ["!epic", "!rare"]
-		level1_entries = ["&enchantments"]
-		level2_entries = ["*"]
+		level0_entries = []
+		level1_entries = []
+		level2_entries = []
 		level3_entries = []
 		level4_entries = []
 		level5_entries = []
