--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -5,7 +5,6 @@ Badge Box
 Biomes O' Plenty
 CC: Tweaked
 Chipped
-CobbleDollars
 Cobblemon
 Cobblemon Box Link
 Cobblemon Fight or Flight
@@ -59,4 +58,13 @@ Mekanism: Tools
 MEGA Cells
 Immersive Aircraft
 Small Ships
-Brendonbottlecaps
+Brendon's Bottle Caps
+CobbleDollars
+Deeper and Darker
+Deep Aether
+Spice of Life: Carrot Edition
+The Aether
+FTB Filter System
+Infinite Dimensions
+Cobblemon: CobbleLoots
+Trash Cans
