--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -157,6 +157,16 @@ mekanism:smelting
 mekanism:sps_casing
 mekanism:washing
 mekanismgenerators:fission
-minecraft:tag_recipes/block
-minecraft:tag_recipes/fluid
-minecraft:tag_recipes/item
+aether:accessory_freezable
+aether:ambrosium_enchanting
+aether:block_placement_ban
+aether:enchanting
+aether:freezing
+aether:fuel
+aether:icestone_freezable
+aether:incubation
+aether:item_placement_ban
+aether:placement_conversion
+aether:repairing
+aether:swet_ball_conversion
+deep_aether:poison_recipe
