--- a/config/cobblenav/server-config.json
+++ b/config/cobblenav/server-config.json
@@ -1,7 +1,8 @@
 {
   "hideUnknownPokemon": true,
   "showPokemonTooltips": true,
-  "showUnknownPokemonTooltips": false,
+  "hideUnknownPokemonTooltips": false,
+  "hideNaturalBlockConditions": true,
   "checkSpawnWidth": 14,
   "checkSpawnHeight": 16,
   "searchAreaWidth": 200.0,
@@ -18,5 +19,25 @@
     },
     "hiddenAbility": 1.0,
     "eggMove": 1.0
-  }
+  },
+  "collectableConditions": [
+    "biomes",
+    "coordinates",
+    "light",
+    "moon_phase",
+    "sky_light",
+    "slime_chunk",
+    "structures",
+    "time_range",
+    "under_open_sky",
+    "weather",
+    "y_height",
+    "depth_submerged",
+    "depth_surface",
+    "fluid_submerged",
+    "fluid_surface",
+    "area_type_block",
+    "grounded_type_block",
+    "seafloor_type_block"
+  ]
 }
