--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -2,8 +2,6 @@ Minecraft
 AE2WTLib
 Applied Energistics 2
 Badge Box
-Biomes O' Plenty
-Chipped
 Cobblemon
 Cobblemon Box Link
 Cobblemon Fight or Flight
@@ -22,7 +20,6 @@ Myths_and_legends
 Nature's Compass
 Patchouli
 Radical Cobblemon Trainers
-Rechiseled
 SecurityCraft
 SimpleTMs
 Sophisticated Backpacks
@@ -59,7 +56,6 @@ CobbleDollars
 Spice of Life: Carrot Edition
 Infinite Dimensions
 Cobblemon: CobbleLoots
-Trash Cans
 Create
 Cobblemon Smartphone
 PKGBadges
@@ -74,3 +70,6 @@ The Aether
 Create: Bells & Whistles
 Create: Desires 2 Dreams
 Create: Deep Dark
+CobbleFurnies
+Biomes O' Plenty
+Supplementaries
