--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -16,7 +16,6 @@ ae2:condenser
 ae2:entropy
 ae2:inscriber
 ae2:transform
-chipped:workbench
 cobblemon:berry_recipe
 cobblemonintegrations:cobblemon_drops
 cobblemonintegrations:evo_items
@@ -136,7 +135,6 @@ immersiveengineering:mixer
 immersiveengineering:refinery
 immersiveengineering:sawmill
 immersiveengineering:squeezer
-rechiseled:chiseling
 securitycraft:securitycraft_to_vanilla
 securitycraft:vanilla_to_securitycraft
 oritech:assembler
@@ -199,3 +197,4 @@ jei_mekanism_multiblocks:multiblock.mekanism.sps
 jei_mekanism_multiblocks:multiblock.mekanismgenerators.fission_reactor
 jei_mekanism_multiblocks:multiblock.mekanismgenerators.fusion_reactor
 jei_mekanism_multiblocks:multiblock.mekanismgenerators.turbine
+cobblefurnies:furni_crafting
