--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ config/fabric/indigo-renderer.properties
 config/libraryferret_1.properties
 config/bettervillage_1.properties
 config/xaerominimap_entities.json
+/config/forgeendertech
