--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -55,7 +55,6 @@ Brendon's Bottle Caps
 CobbleDollars
 Spice of Life: Carrot Edition
 Infinite Dimensions
-Cobblemon: CobbleLoots
 Create
 Cobblemon Smartphone
 PKGBadges
@@ -73,3 +72,4 @@ Create: Deep Dark
 CobbleFurnies
 Biomes O' Plenty
 Supplementaries
+Cobbleloots: Loot Balls and More!
