--- a/config/cobblemonoutbreaks/outbreaks_config.json
+++ b/config/cobblemonoutbreaks/outbreaks_config.json
@@ -11,9 +11,9 @@
     "outbreak_spawn_count": 1,
     "min_spawn_radius": 32,
     "max_spawn_radius": 64,
-    "portal_spawn_choice": "per_player",
-    "per_player_outbreak_timer": 36000,
-    "random_outbreak_timer": 72000
+    "portal_spawn_choice": "random_player",
+    "per_player_outbreak_timer": 56000,
+    "random_outbreak_timer": 128000
   },
   "shiny_config": {
     "shiny_chance": 512.0
