--- a/config/jei-server.toml
+++ b/config/jei-server.toml
@@ -1,7 +1,7 @@
 ["cheat mode"]
 	#Enable the cheat mode for players who have an operator status (/op).
-	enableCheatModeForOp = false
+	enableCheatModeForOp = true
 	#Enable the cheat mode for players who are in the creative mode.
-	enableCheatModeForCreative = false
+	enableCheatModeForCreative = true
 	#Enable the cheat mode for players who can use the "/give" command.
 	enableCheatModeForGive = false
