--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -45,9 +45,6 @@ Eternal Starlight
 FTB Filter System
 Oritech
 SecurityCraft
-Sophisticated Backpacks
-Sophisticated Core
-Sophisticated Storage
 Supplementaries
 The Aether
 The Twilight Forest
@@ -87,3 +84,4 @@ Create: Copycats+
 Mekanism Covers
 Cobblemon Parts
 Create: Applied Kinetics
+Backpacked
