--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ config/libraryferret_1.properties
 config/bettervillage_1.properties
 config/xaerominimap_entities.json
 /config/forgeendertech
+config/xaerominimap_entities.json
+config/cobblemon/main.json
