--- a/config/create_better_villagers/common.json5
+++ b/config/create_better_villagers/common.json5
@@ -1,6 +1,6 @@
 {
 	// Enable or disable the welcome message, Requires game restart after changing this setting.
-	"ENABLE_IN_GAME_MESSAGE": true,
+	"ENABLE_IN_GAME_MESSAGE": false,
 	// Enable Andesite Worker Profession, Requires game restart after changing this setting.
 	"ENABLE_ANDESITE_WORKER": true,
 	// Enable Brassworker Profession, Requires game restart after changing this setting.
