--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -50,7 +50,6 @@ The Aether
 The Twilight Forest
 Twilight Flavors & Delight
 Cobblemon
-Cobblemon: Mega Showdown
 Cobblenav
 Brendon's Bottle Caps
 CobbleDollars
@@ -86,3 +85,6 @@ Cobblemon Parts
 Create: Applied Kinetics
 Backpacked
 Pylons
+Cobblemon:Mega Showdown
+Entangled
+Mob Grinding Utils
