--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -236,3 +236,6 @@ jei_mekanism_multiblocks:multiblock.mekanism.sps
 jei_mekanism_multiblocks:multiblock.mekanismgenerators.fission_reactor
 jei_mekanism_multiblocks:multiblock.mekanismgenerators.fusion_reactor
 jei_mekanism_multiblocks:multiblock.mekanismgenerators.turbine
+minecraft:grindstone
+cobblemon:campfire_pot_recipe
+mob_grinding_utils:solidify
