--- a/config/openloader/packs/MCC 1.21/data/minecolonies/tags/worldgen/biome/drybiomes.json
+++ b/config/openloader/packs/MCC 1.21/data/minecolonies/tags/worldgen/biome/drybiomes.json
@@ -7,7 +7,7 @@
     "#minecraft:is_nether",
 	"#minecolonies:coldbiomes",
 	"#minecolonies:humidbiomes",
-	"#minecolonies:temperatebiomes"
+	"#minecolonies:temperatebiomes",
     "minecraft:badlands",
     "minecraft:desert",
     "minecraft:eroded_badlands",
