--- a/config/adlods/Deposits/iron.cfg
+++ b/config/adlods/Deposits/iron.cfg
@@ -13,6 +13,22 @@ Deposit {
         #minecraft:deepslate_ore_replaceables -> deepslate_iron_ore
      >
 
+    # List of descendants (deposits/geodes) that will attempt to be generated after this (parent) one.
+    # Format: threshold% -> descendant, chance% [:group]
+    #   <threshold> - minimum percentage of the parent's size that must be reached to begin generating this descendant
+    #   <descendant> - ID of the descendant in the following format: deposit:name or geode:name
+    #   <chance> - chance of generating the descendant (from 0 to 100%)
+    #   <group> - group name (optional parameter). Can contain only letters, digits or underscores [a-zA-Z0-9_].
+    # All listed descendants will attempt to be generated in random order.
+    # Group descendants to achieve logical "or" behaviour (only one descendant from each group will be generated).
+    # Starting position will be chosen within the chunk where the parent's size has reached the threshold value.
+    # Examples:
+    #    90% -> deposit:diamond, 10%
+    #    80% -> deposit:iron, 40% :metals
+    #    70% -> geode:amethyst, 20%
+    S:descendants <
+     >
+
     # List of ores and their weights for this deposit.
     # Syntax: oreId [, weight]
     # 
@@ -98,6 +114,9 @@ Deposit {
         # Whether or not the ore blocks can be exposed to air. [default: true]
         B:exposed=true
 
+        # Maximum number of attempts to generate this ore, picking different starting points, until all conditions are met. [range: 1 ~ 1024, default: 16]
+        I:maxAttempts=16
+
         # Ratio of height to width.
         # Values greater than 1 will result in tall shapes, whilst values less than 1 will result in flat shapes.
         #  [range: 0.0 ~ 10.0, default: 1.0]
@@ -155,7 +174,7 @@ Deposit {
         # Maximum displacement of the indicator shape elements. [range: 0 ~ 16, default: 1]
         I:distortion=1
 
-        # ID of a block for a single-block indicator or ID of a structure to bind this deposit to. [default: ]
+        # ID of a block (for a single-block indicator), a placed_feature or ID of a structure to bind this deposit to. [default: ]
         S:id=
 
         # Percentage of the deposit full size required to create an above-ground indicator.
