--- a/config/adlods/Geodes/amethyst.cfg
+++ b/config/adlods/Geodes/amethyst.cfg
@@ -7,12 +7,28 @@ Config {
 
 
 Geode {
-    # Determines how much noise will be applied to the final shape of the geode [range: 0.0 ~ 10.0, default: 0.9]
+    # List of descendants (deposits/geodes) that will attempt to be generated after this (parent) one.
+    # Format: threshold% -> descendant, chance% [:group]
+    #   <threshold> - minimum percentage of the parent's size that must be reached to begin generating this descendant
+    #   <descendant> - ID of the descendant in the following format: deposit:name or geode:name
+    #   <chance> - chance of generating the descendant (from 0 to 100%)
+    #   <group> - group name (optional parameter). Can contain only letters, digits or underscores [a-zA-Z0-9_].
+    # All listed descendants will attempt to be generated in random order.
+    # Group descendants to achieve logical "or" behaviour (only one descendant from each group will be generated).
+    # Starting position will be chosen within the chunk where the parent's size has reached the threshold value.
+    # Examples:
+    #    90% -> deposit:diamond, 10%
+    #    80% -> deposit:iron, 40% :metals
+    #    70% -> geode:amethyst, 20%
+    S:descendants <
+     >
+
+    # Determines how much noise will be applied to the final shape of the geode [range: 0.0 ~ 10.0, default: 0.0]
     S:noiseMultiplier=0.9
 
     # Rarity (in chunks). The higher the value, the rarer the generation will be.
     # Example: a value of 1000 means that generation will occur approximately once every 1000 chunks.
-    #  [range: 0 ~ 256000, default: 2400]
+    #  [range: 0 ~ 256000, default: 0]
     I:rarity=2400
 
     # List of blocks that can be replaced with this ore.
@@ -65,16 +81,19 @@ Geode {
     ##########################################################################################################
 
     Altitude {
-        #  [range: -2147483648 ~ 2147483647, default: 30]
+        #  [range: -2147483648 ~ 2147483647, default: 0]
         I:max=30
 
-        #  [range: -2147483648 ~ 2147483647, default: -58]
+        #  [range: -2147483648 ~ 2147483647, default: 0]
         I:min=-58
     }
 
     Miscellaneous {
         # Whether or not the ore blocks can be exposed to air. [default: true]
         B:exposed=true
+
+        # Maximum number of attempts to generate this ore, picking different starting points, until all conditions are met. [range: 1 ~ 1024, default: 16]
+        I:maxAttempts=16
 
         # Ratio of height to width.
         # Values greater than 1 will result in tall shapes, whilst values less than 1 will result in flat shapes.
@@ -115,7 +134,7 @@ Geode {
         # Maximum displacement of the indicator shape elements. [range: 0 ~ 16, default: 1]
         I:distortion=1
 
-        # ID of a block for a single-block indicator or ID of a structure to bind this geode to. [default: ]
+        # ID of a block (for a single-block indicator), a placed_feature or ID of a structure to bind this geode to. [default: ]
         S:id=
 
         # Percentage of the deposit full size required to create an above-ground indicator.
@@ -148,10 +167,10 @@ Geode {
          >
 
         Radius {
-            #  [range: 0 ~ 64, default: 12]
+            #  [range: 0 ~ 64, default: 0]
             I:max=12
 
-            #  [range: 0 ~ 64, default: 6]
+            #  [range: 0 ~ 64, default: 0]
             I:min=6
         }
 
@@ -183,7 +202,7 @@ Geode {
              >
 
             thickness {
-                #  [range: 0 ~ 32, default: 4]
+                #  [range: 0 ~ 32, default: 1]
                 I:max=4
 
                 #  [range: 0 ~ 32, default: 1]
@@ -199,7 +218,7 @@ Geode {
              >
 
             thickness {
-                #  [range: 0 ~ 32, default: 3]
+                #  [range: 0 ~ 32, default: 1]
                 I:max=3
 
                 #  [range: 0 ~ 32, default: 1]
@@ -215,7 +234,7 @@ Geode {
              >
 
             thickness {
-                #  [range: 0 ~ 32, default: 2]
+                #  [range: 0 ~ 32, default: 1]
                 I:max=2
 
                 #  [range: 0 ~ 32, default: 1]
@@ -265,7 +284,7 @@ Geode {
     ##########################################################################################################
 
     Crack {
-        #  [range: 0.0 ~ 100.0, default: 95.0]
+        #  [range: 0.0 ~ 100.0, default: 0.0]
         S:chance=95.0
 
         #  
@@ -276,10 +295,10 @@ Geode {
          >
 
         Radius {
-            #  [range: 0 ~ 64, default: 20]
+            #  [range: 0 ~ 64, default: 0]
             I:max=20
 
-            #  [range: 0 ~ 64, default: 8]
+            #  [range: 0 ~ 64, default: 0]
             I:min=8
         }
 
