--- a/config/adlods/VanillaOres/gravel.cfg
+++ b/config/adlods/VanillaOres/gravel.cfg
@@ -79,6 +79,9 @@ VanillaOre {
         # Whether or not the ore blocks can be exposed to air. [default: true]
         B:exposed=true
 
+        # Maximum number of attempts to generate this ore, picking different starting points, until all conditions are met. [range: 1 ~ 1024, default: 1]
+        I:maxAttempts=1
+
         # Ratio of height to width.
         # Values greater than 1 will result in tall shapes, whilst values less than 1 will result in flat shapes.
         #  [range: 0.0 ~ 10.0, default: 1.0]
@@ -98,10 +101,10 @@ VanillaOre {
     ##########################################################################################################
 
     VeinsInChunk {
-        #  [range: 1 ~ 256, default: 14]
+        #  [range: 1 ~ 1024, default: 14]
         I:max=14
 
-        #  [range: 1 ~ 256, default: 14]
+        #  [range: 1 ~ 1024, default: 14]
         I:min=14
     }
 
@@ -112,10 +115,10 @@ VanillaOre {
     ##########################################################################################################
 
     BlocksInVein {
-        #  [range: 1 ~ 256, default: 33]
+        #  [range: 1 ~ 1024, default: 33]
         I:max=33
 
-        #  [range: 1 ~ 256, default: 1]
+        #  [range: 1 ~ 1024, default: 1]
         I:min=1
     }
 
