--- a/config/adlods/VanillaOres/lapis_ore.cfg
+++ b/config/adlods/VanillaOres/lapis_ore.cfg
@@ -80,6 +80,9 @@ VanillaOre {
         # Whether or not the ore blocks can be exposed to air. [default: true]
         B:exposed=true
 
+        # Maximum number of attempts to generate this ore, picking different starting points, until all conditions are met. [range: 1 ~ 1024, default: 1]
+        I:maxAttempts=1
+
         # Ratio of height to width.
         # Values greater than 1 will result in tall shapes, whilst values less than 1 will result in flat shapes.
         #  [range: 0.0 ~ 10.0, default: 1.0]
@@ -99,10 +102,10 @@ VanillaOre {
     ##########################################################################################################
 
     VeinsInChunk {
-        #  [range: 1 ~ 256, default: 6]
+        #  [range: 1 ~ 1024, default: 6]
         I:max=6
 
-        #  [range: 1 ~ 256, default: 6]
+        #  [range: 1 ~ 1024, default: 6]
         I:min=6
     }
 
@@ -113,10 +116,10 @@ VanillaOre {
     ##########################################################################################################
 
     BlocksInVein {
-        #  [range: 1 ~ 256, default: 7]
+        #  [range: 1 ~ 1024, default: 7]
         I:max=7
 
-        #  [range: 1 ~ 256, default: 1]
+        #  [range: 1 ~ 1024, default: 1]
         I:min=1
     }
 
