--- a/config/rctmod-server.toml
+++ b/config/rctmod-server.toml
@@ -56,9 +56,19 @@
 	# Range: 0 ~ 2147483646
 	maxTrainersTotal = 60
 	#━━━━━━━━━━
-	#The maximum level difference between the strongest pokemon in the team of a player and the strongest
-	#pokemon in the team of a trainer to spawn for that player. The spawn weight decreases with a higher
-	#level difference. Trainers with pokemon above the level cap of a player are excluded.
+	#The maximum level difference between the strongest pokemon in the team of a
+	#player (at or below that players level cap) and the strongest pokemon in the
+	#team of a trainer to allow that trainer to spawn for the player.
+	#
+	#This value will scale linearly with a players level relative to 100 but will
+	#not go below 4 (unless explicitely set to a lower value). An exception to this
+	#are key trainers, who may always spawn with a level difference up to the
+	#configured value.
+	#
+	#For example with player Level = 20 and maxLevelDiff = 25:
+	#result = max(4, (20/100) * 25) = max(4, 5) = 5
+	#
+	#The spawn weight decreases with a higher level difference.
 	# Default: 25
 	# Range: 0 ~ 100
 	maxLevelDiff = 25
@@ -102,20 +112,14 @@
 
 [Players]
 	#━━━━━━━━━━
-	#Initial level cap of players. Pokemon will not gain any experience if at or above the level cap.
+	#Initial level cap of players. Pokemon will not gain any experience if at or
+	#above the level cap. This value will be capped to not go below the level cap
+	#for the first trainer of a series (you may use 'relativeLevelCap' for that).
 	# Default: 15
-	# Range: 1 ~ 100
+	# Range: 1 ~ 2147483646
 	initialLevelCap = 15
 	#━━━━━━━━━━
-	#The required level cap for trainers is based of the strongest pokemon in their team.
-	#This value will be added to the derived player level cap (including the initial level cap).
-	#Example: A trainer with a Pikachu at level 50 has a level cap requirement of 50.
-	#If the additiveLevelCapRequirement is -10 the required level cap for that trainer becomes 40,
-	#if it is 10 the level cap requirement becomes 60.
-	additiveLevelCapRequirement = 1
-	#━━━━━━━━━━
 	#If enabled the level cap of a players will not prevent their pokemon from gaining experience and leveling up.
-	#Trainers will still refuse to battle players that carry pokemon above their level cap!
 	allowOverLeveling = false
 	#━━━━━━━━━━
 	#The initial series players are placed in when entering a world for the first time. Apart from any series id
@@ -128,8 +132,38 @@
 	#current series. If this option is enabled, players must have completed any other series first to gain
 	#access to the trade at the trainer association.
 	freeroamRequiresCompletedSeries = true
+	#━━━━━━━━━━
+	#The level cap of a player is based of the strongest pokemon from the party of their next
+	#required trainer in a series. The relativeLevelCap is added to the resulting value. For
+	#instance if the next trainer for a player has a Pikachu at level 50, that players level
+	#cap will be 50 + relativeLevelCap (can be negative).
+	relativeLevelCap = 0
 
 [Debug]
 	#━━━━━━━━━━
 	#If enabled additional information are printed to the log whenever a trainer spawns or despawns.
 	logSpawning = false
+
+[Trainers]
+	#━━━━━━━━━━
+	#Determines if trainers may force players into a battle if they look at each other for
+	#a certain amount if time.
+	forceBattleOnSight = true
+	#━━━━━━━━━━
+	#Max distance in blocks at which trainers may start a battle on sight.
+	# Default: 8.0
+	# Range: 0.0 ~ 32.0
+	forceBattleMaxDistance = 8.0
+	#━━━━━━━━━━
+	#Number of ticks a trainer and player need to stare at each other to initiate a battle.
+	#Setting this to a very large number effectively disables this features but trainers
+	#will behave slightly different.
+	# Default: 60
+	# Range: 0 ~ 2147483646
+	forceBattleLookTicks = 60
+	#━━━━━━━━━━
+	#Maximum level difference between the strongest pokemon of a trainer and a player to
+	#allow the trainer to force a battle.
+	# Default: 16
+	# Range: 0 ~ 2147483646
+	forceBattleMaxLevelDiff = 16
