--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -51,7 +51,6 @@ The Twilight Forest
 Twilight Flavors & Delight
 Cobblemon
 Cobblenav
-Brendon's Bottle Caps
 CobbleDollars
 CobbleFurnies
 Cobbleloots: Loot Balls and More!
@@ -88,3 +87,6 @@ Pylons
 Cobblemon:Mega Showdown
 Entangled
 Mob Grinding Utils
+Moonlight Lib
+Max Repel
+Only Bottle Caps
