--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -211,7 +211,6 @@ securitycraft:securitycraft_to_vanilla
 securitycraft:vanilla_to_securitycraft
 twilightdelight:frozen
 twilightforest:crumble_horn
-twilightforest:moonworm_queen_repair
 twilightforest:ominous_fire
 twilightforest:transformation_powder
 twilightforest:uncrafting
@@ -239,3 +238,4 @@ jei_mekanism_multiblocks:multiblock.mekanismgenerators.turbine
 minecraft:grindstone
 cobblemon:campfire_pot_recipe
 mob_grinding_utils:solidify
+twilightforest:drying
