--- a/config/modernfix-mixins.properties
+++ b/config/modernfix-mixins.properties
@@ -44,6 +44,7 @@
 #  mixin.feature.spark_profile_launch=false # (default)
 #  mixin.feature.spark_profile_world_join=false # (default)
 #  mixin.feature.stalled_chunk_load_detection=false # (default)
+#  mixin.feature.suppress_narrator_stacktrace=true # (default)
 #  mixin.feature.warn_missing_perf_mods=true # (default)
 #  mixin.launch.class_search_cache=true # (default)
 #  mixin.perf.cache_blockstate_cache_arrays=true # (default)
@@ -54,22 +55,25 @@
 #  mixin.perf.chunk_meshing=true # (default)
 #  mixin.perf.clear_mixin_classinfo=false # (default)
 #  mixin.perf.compact_bit_storage=true # (default)
+#  mixin.perf.compact_mojang_registries=true # (default)
 #  mixin.perf.compress_unihex_font=true # (default)
 #  mixin.perf.datapack_reload_exceptions=true # (default)
 #  mixin.perf.dedicated_reload_executor=true # (default)
 #  mixin.perf.deduplicate_climate_parameters=false # (default)
 #  mixin.perf.deduplicate_location=false # (default)
 #  mixin.perf.deduplicate_wall_shapes=true # (default)
+#  mixin.perf.dynamic_dfu=true # (default)
 #  mixin.perf.dynamic_entity_renderers=false # (default)
 #  mixin.perf.dynamic_resources=false # (default)
 #  mixin.perf.dynamic_resources.ctm=true # (default)
 #  mixin.perf.dynamic_resources.ldlib=true # (default)
-#  mixin.perf.dynamic_sounds=true # (default)
 #  mixin.perf.dynamic_structure_manager=true # (default)
 #  mixin.perf.faster_ingredients=true # (default)
 #  mixin.perf.faster_item_rendering=false # (default)
 #  mixin.perf.faster_texture_stitching=true # (default)
 #  mixin.perf.fix_loop_spin_waiting=true # (default)
+#  mixin.perf.ingredient_item_deduplication=false # (default)
+#  mixin.perf.lazy_search_tree_registry=true # (default)
 #  mixin.perf.memoize_creative_tab_build=true # (default)
 #  mixin.perf.model_optimizations=true # (default)
 #  mixin.perf.mojang_registry_size=true # (default)
@@ -77,13 +81,12 @@
 #  mixin.perf.reduce_blockstate_cache_rebuilds=true # (default)
 #  mixin.perf.remove_biome_temperature_cache=true # (default)
 #  mixin.perf.resourcepacks=true # (default)
-#  mixin.perf.smart_ingredient_sync=true # (default)
+#  mixin.perf.smart_ingredient_sync=false # (overridden for mod compat)
 #  mixin.perf.state_definition_construct=true # (default)
 #  mixin.perf.tag_id_caching=true # (default)
 #  mixin.perf.thread_priorities=false # (overridden for mod compat)
 #  mixin.perf.ticking_chunk_alloc=true # (default)
-#  mixin.perf.worldgen_allocation=false # (default)
+#  mixin.perf.worldgen_allocation=true # (default)
 #  mixin.safety=true # (default)
 #
 # User overrides go here.
-mixin.perf.dynamic_resources=true
