--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ config/xaerominimap_entities.json
 /config/forgeendertech
 config/xaerominimap_entities.json
 config/cobblemon/main.json
+config/forgeendertech/cached.dat
+config/xaerominimap_entities.json
