--- a/config/Advancedperipherals/world.toml
+++ b/config/Advancedperipherals/world.toml
@@ -3,7 +3,7 @@
 	#Enable the villager structures for the computer scientist.
 	enableVillagerStructures = true
 	#Gives the ap documentation to new players.
-	givePlayerBookOnJoin = true
+	givePlayerBookOnJoin = false
 	#The weight of the villager structures.
 	# Default: 10
 	# Range: 0 ~ 16000
